# framed_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  config.py.example  docker-compose.demo.yml  main.py  pyproject.toml  requirements.txt  stats.py
.github/workflows/: docker.yml
models/: __init__.py  db.py  episode_result.py  framed_result.py  group.py  user.py
tests/: conftest.py  test_save_results.py
